--- a/3rd_experiment/EE_Measurement/report.tex
+++ b/3rd_experiment/EE_Measurement/report.tex
@@ -155,7 +155,7 @@ myRIOの5V、3.3V、GND端子及びAnalog I/O、Digital I/Oの端子が、ブレ
 
 
 
-			\begin{figure}[hbtp]
+			\begin{figure}[b]
 				\begin{tabular}{cc}
 					\begin{minipage}[c]{0.5\linewidth}
 						\centering
@@ -173,6 +173,22 @@ myRIOの5V、3.3V、GND端子及びAnalog I/O、Digital I/Oの端子が、ブレ
 						
 					\end{minipage}\\
 
+					\begin{minipage}[c]{0.5\linewidth}
+						\centering
+						\includegraphics[keepaspectratio,scale=0.4]{kekka1.png}
+						\caption{課題実験1の出力結果}
+						\label{fig:kekka1}
+						
+					\end{minipage}&
+		
+					\begin{minipage}[c]{0.5\linewidth}
+						\centering
+						\includegraphics[keepaspectratio,scale=0.4]{kekka2.png}
+						\caption{課題実験2の出力結果}
+						\label{fig:kekka2}
+						
+					\end{minipage}
+					\newpage
 
 					\begin{minipage}[c]{0.5\linewidth}
 						\centering
@@ -196,8 +212,152 @@ myRIOの5V、3.3V、GND端子及びAnalog I/O、Digital I/Oの端子が、ブレ
 
 
 \section{結果}
-			
+	\subsection{課題実験１の実験結果}
+		実験の結果、下の表\ref{tab:hensa}は各電圧ごとの平均値と標準偏差をまとめたものである。
+		この表から平均値を標準偏差は0Vの場合0.007202[V],1.68614E-07、3.3Vの場合3.26400127[V],1.33956E-07、5Vの場合4.9806267[V]3,1.68614E-07となった。
+
+
+
+		\begin{table}[hbtp]
+			\caption{課題実験１の各電圧ごとの標準偏差}
+			\centering
+			\label{tab:hensa}
+			\begin{tabular}{|c|c|c|}
+				\hline
+				電圧	&	平均値	&	標準誤差\\
+				\hline \hline
+				0[V]		&0.007202&	1.68614E-07\\
+				\hline
+				3.3[V]	&3.26400127&	1.33956E-07\\
+				\hline
+				5[V]		&4.98062673&	1.68614E-07\\
+				\hline
+			\end{tabular}
+		\end{table}
+
+		\begin{table}[b]
+			\caption{0[V]の時の出力結果}
+			\centering
+			\label{tab:0}
+			\begin{tabular}{|c|c|c|c|c|c|c|c|c|}
+				\hline
+			測定回数&測定電圧&測定回数&測定電圧&測定回数&測定電圧&測定回数&測定電圧\\
+			\hline
+			0  & 0.007324 & 25 & 0.007324 & 50 & 0.007324 & 75 & 0.007324 \\
+			1  & 0.007324 & 26 & 0.007324 & 51 & 0.007324 & 76 & 0.007324 \\
+			2  & 0.007324 & 27 & 0.007324 & 52 & 0.007324 & 77 & 0.007324 \\
+			3  & 0.007324 & 28 & 0.007324 & 53 & 0.007324 & 78 & 0.007324 \\
+			4  & 0.007324 & 29 & 0.007324 & 54 & 0.007324 & 79 & 0.007324 \\
+			5  & 0.007324 & 30 & 0.007324 & 55 & 0.007324 & 80 & 0.007324 \\
+			6  & 0.007324 & 31 & 0.007324 & 56 & 0.007324 & 81 & 0.007324 \\
+			7  & 0.007324 & 32 & 0.007324 & 57 & 0.007324 & 82 & 0.007324 \\
+			8  & 0.007324 & 33 & 0.007324 & 58 & 0.007324 & 83 & 0.007324 \\
+			9  & 0.007324 & 34 & 0.007324 & 59 & 0.007324 & 84 & 0.007324 \\
+			10 & 0.007324 & 35 & 0.006104 & 60 & 0.007324 & 85 & 0.006104 \\
+			11 & 0.007324 & 36 & 0.006104 & 61 & 0.007324 & 86 & 0.006104 \\
+			12 & 0.007324 & 37 & 0.006104 & 62 & 0.007324 & 87 & 0.007324 \\
+			13 & 0.007324 & 38 & 0.006104 & 63 & 0.007324 & 88 & 0.007324 \\
+			14 & 0.007324 & 39 & 0.007324 & 64 & 0.007324 & 89 & 0.006104 \\
+			15 & 0.007324 & 40 & 0.007324 & 65 & 0.007324 & 90 & 0.006104 \\
+			16 & 0.007324 & 41 & 0.007324 & 66 & 0.007324 & 91 & 0.007324 \\
+			17 & 0.007324 & 42 & 0.007324 & 67 & 0.007324 & 92 & 0.007324 \\
+			18 & 0.007324 & 43 & 0.007324 & 68 & 0.007324 & 93 & 0.007324 \\
+			19 & 0.007324 & 44 & 0.007324 & 69 & 0.007324 & 94 & 0.007324 \\
+			20 & 0.007324 & 45 & 0.007324 & 70 & 0.007324 & 95 & 0.007324 \\
+			21 & 0.007324 & 46 & 0.007324 & 71 & 0.007324 & 96 & 0.007324 \\
+			22 & 0.007324 & 47 & 0.007324 & 72 & 0.007324 & 97 & 0.006104 \\
+			23 & 0.007324 & 48 & 0.007324 & 73 & 0.007324 & 98 & 0.006104 \\
+			24 & 0.007324 & 49 & 0.007324 & 74 & 0.007324 & 99 & 0.007324\\
+			\hline
+			\end{tabular}
+			\end{table}
+
+		\begin{table}[b]
+			\centering
+			\caption{3.3[V]の時の出力結果}
+			\label{tab:3.3}
+			\begin{tabular}{|c|c|c|c|c|c|c|c|}
+				\hline
+			測定回数&測定電圧&測定回数&測定電圧&測定回数&測定電圧&測定回数&測定電圧\\
+			\hline
+			0  & 3.26416  & 25 & 3.26416  & 50 & 3.26416 & 75 & 3.262939 \\
+			1  & 3.26416  & 26 & 3.26416  & 51 & 3.26416 & 76 & 3.262939 \\
+			2  & 3.26416  & 27 & 3.26416  & 52 & 3.26416 & 77 & 3.26416  \\
+			3  & 3.26416  & 28 & 3.262939 & 53 & 3.26416 & 78 & 3.26416  \\
+			4  & 3.26416  & 29 & 3.262939 & 54 & 3.26416 & 79 & 3.26416  \\
+			5  & 3.262939 & 30 & 3.26416  & 55 & 3.26416 & 80 & 3.26416  \\
+			6  & 3.262939 & 31 & 3.26416  & 56 & 3.26416 & 81 & 3.26416  \\
+			7  & 3.26416  & 32 & 3.26416  & 57 & 3.26416 & 82 & 3.262939 \\
+			8  & 3.26416  & 33 & 3.26416  & 58 & 3.26416 & 83 & 3.262939 \\
+			9  & 3.26416  & 34 & 3.26416  & 59 & 3.26416 & 84 & 3.26416  \\
+			10 & 3.26416  & 35 & 3.26416  & 60 & 3.26416 & 85 & 3.26416  \\
+			11 & 3.26416  & 36 & 3.26416  & 61 & 3.26416 & 86 & 3.26416  \\
+			12 & 3.26416  & 37 & 3.26416  & 62 & 3.26416 & 87 & 3.26416  \\
+			13 & 3.26416  & 38 & 3.26416  & 63 & 3.26416 & 88 & 3.26416  \\
+			14 & 3.26416  & 39 & 3.26416  & 64 & 3.26416 & 89 & 3.26416  \\
+			15 & 3.26416  & 40 & 3.26416  & 65 & 3.26416 & 90 & 3.26416  \\
+			16 & 3.26416  & 41 & 3.26416  & 66 & 3.26416 & 91 & 3.26416  \\
+			17 & 3.26416  & 42 & 3.26416  & 67 & 3.26416 & 92 & 3.262939 \\
+			18 & 3.26416  & 43 & 3.26416  & 68 & 3.26416 & 93 & 3.262939 \\
+			19 & 3.26416  & 44 & 3.26416  & 69 & 3.26416 & 94 & 3.26416  \\
+			20 & 3.26416  & 45 & 3.26416  & 70 & 3.26416 & 95 & 3.26416  \\
+			21 & 3.26416  & 46 & 3.26416  & 71 & 3.26416 & 96 & 3.262939 \\
+			22 & 3.26416  & 47 & 3.26416  & 72 & 3.26416 & 97 & 3.262939 \\
+			23 & 3.26416  & 48 & 3.262939 & 73 & 3.26416 & 98 & 3.26416  \\
+			24 & 3.26416  & 49 & 3.26416  & 74 & 3.26416 & 99 & 3.26416 \\
+			\hline
+			\end{tabular}
+			\end{table}
+
+			\begin{table}[b]
+				\centering
+				\caption{5[V]の時の出力結果}
+				label{tab:5[V]}
+				\begin{tabular}{|c|c|c|c|c|c|c|c|c|}
+					\hline
+					測定回数&測定電圧&測定回数&測定電圧&測定回数&測定電圧&測定回数&測定電圧\\
+					\hline
+				0  & 4.981689 & 25 & 4.980468 & 50 & 4.980468 & 75 & 4.980468 \\
+				1  & 4.980468 & 26 & 4.980468 & 51 & 4.980468 & 76 & 4.980468 \\
+				2  & 4.980468 & 27 & 4.980468 & 52 & 4.980468 & 77 & 4.980468 \\
+				3  & 4.981689 & 28 & 4.980468 & 53 & 4.980468 & 78 & 4.980468 \\
+				4  & 4.980468 & 29 & 4.980468 & 54 & 4.980468 & 79 & 4.980468 \\
+				5  & 4.980468 & 30 & 4.980468 & 55 & 4.980468 & 80 & 4.980468 \\
+				6  & 4.980468 & 31 & 4.980468 & 56 & 4.980468 & 81 & 4.980468 \\
+				7  & 4.980468 & 32 & 4.980468 & 57 & 4.980468 & 82 & 4.980468 \\
+				8  & 4.980468 & 33 & 4.980468 & 58 & 4.980468 & 83 & 4.980468 \\
+				9  & 4.980468 & 34 & 4.980468 & 59 & 4.981689 & 84 & 4.980468 \\
+				10 & 4.981689 & 35 & 4.980468 & 60 & 4.981689 & 85 & 4.980468 \\
+				11 & 4.981689 & 36 & 4.980468 & 61 & 4.980468 & 86 & 4.980468 \\
+				12 & 4.980468 & 37 & 4.980468 & 62 & 4.980468 & 87 & 4.980468 \\
+				13 & 4.980468 & 38 & 4.981689 & 63 & 4.980468 & 88 & 4.980468 \\
+				14 & 4.981689 & 39 & 4.981689 & 64 & 4.980468 & 89 & 4.980468 \\
+				15 & 4.981689 & 40 & 4.980468 & 65 & 4.980468 & 90 & 4.980468 \\
+				16 & 4.981689 & 41 & 4.980468 & 66 & 4.980468 & 91 & 4.980468 \\
+				17 & 4.980468 & 42 & 4.980468 & 67 & 4.980468 & 92 & 4.980468 \\
+				18 & 4.980468 & 43 & 4.980468 & 68 & 4.980468 & 93 & 4.980468 \\
+				19 & 4.980468 & 44 & 4.980468 & 69 & 4.980468 & 94 & 4.980468 \\
+				20 & 4.980468 & 45 & 4.980468 & 70 & 4.980468 & 95 & 4.980468 \\
+				21 & 4.980468 & 46 & 4.980468 & 71 & 4.981689 & 96 & 4.980468 \\
+				22 & 4.980468 & 47 & 4.980468 & 72 & 4.981689 & 97 & 4.980468 \\
+				23 & 4.980468 & 48 & 4.980468 & 73 & 4.980468 & 98 & 4.980468 \\
+				24 & 4.980468 & 49 & 4.980468 & 74 & 4.980468 & 99 & 4.980468\\
+				\hline
+				\end{tabular}
+				\end{table}
+
+	\subsection{課題実験２の実験結果}
+		実験の結果、二乗平均平方誤差は1.49994E-10となった。
 \section{考察}
+	\subsection{課題実験１の考察}
+	この実験における理想の平均値と標準偏差はそれぞれ3.0[V],0である。
+	なぜならAO0から5.0[V],3.3[V],0.0[V]を出力しているのでAI0の入力もその値になることが理想である。
+	また、標準偏差も理想は出力値と計測値が同じはずなので0になることが理想であると考察する。
+
+	\subsection{課題実験２の実験結果の考察}
+	図\ref{fig:kinji}は出力電圧表示値と計測電圧表示値の関係をグラフにし、近似曲線求めたものである。
+	また表\ref{tab:grah}
+
 \section{結論}
 
 \begin{thebibliography}{9}%参考文献数が10以上の場合は9を99に変更
