--- a/3rd_experiment/EE_Measurement/report.tex
+++ b/3rd_experiment/EE_Measurement/report.tex
@@ -14,7 +14,7 @@
 	\subTitle{} % サブタイトルがあれば記述
 	\jikkenbi{令和　4年5月12日(木)} % 実験日を記述
 	\jikkenbiII{平成　　年　　月　　日(　　)} % 実験日を記述(二日目がある場合。ない場合はこの行をコメントアウト)
-	\kyoudou{共同実験者名} % 共同実験者名を記述
+	\kyoudou{なし} % 共同実験者名を記述
 	\kyoudouII{} % その他の共同実験者名を記述
 	\yoteibi{5/19}% 予定日を記述
 	\yoteibiII{}% 予定日2を記述
@@ -412,12 +412,11 @@ myRIOの5V、3.3V、GND端子及びAnalog I/O、Digital I/Oの端子が、ブレ
 \begin{itemize}
 	\item LabVIEWとMyRIOを使用して、素子の電圧電流特性について自動計測の方法を習得ことができた。
 	\item 測定データから近似直線式の傾き、切片を求める計算方法を習得することができた。
-	\item 
 \end{itemize}
 
 \begin{thebibliography}{9}%参考文献数が10以上の場合は9を99に変更
 	%\bibitem{xxx}の引用を本文中で行うには\cite{xxx}と記述。
-	\bibitem{a} 著者名, 書名，出版社，発行年．
+	\bibitem{a} 阿部　武雄,村山　実, 電気・電子計測、森北出版,2022年2月21日
 \end{thebibliography}
 
 
