return EE.experiment

--- a/3rd_experiment/EE.experiment/report.tex
+++ b/3rd_experiment/EE.experiment/report.tex
@@ -13,7 +13,7 @@
 	\numTitle{1}{電気電子計測} % 実験番号、タイトルを記述
 	\subTitle{} % サブタイトルがあれば記述
 	\jikkenbi{令和　4年5月12日(木)} % 実験日を記述
-	\jikkenbiII{平成　　年　　月　　日(　　)} % 実験日を記述(二日目がある場合。ない場合はこの行をコメントアウト)
+	\jikkenbiII{令和 4年5月19日(木)} % 実験日を記述(二日目がある場合。ない場合はこの行をコメントアウト)
 	\kyoudou{なし} % 共同実験者名を記述
 	\kyoudouII{} % その他の共同実験者名を記述
 	\yoteibi{5/19}% 予定日を記述
@@ -361,7 +361,7 @@ myRIOの5V、3.3V、GND端子及びAnalog I/O、Digital I/Oの端子が、ブレ
 					\label{tab:task2}
 					\begin{tabular}{|c|c|c|c|c|}
 					\hline
-					計測回数&電圧&計測電圧&誤差gosa\\
+					計測回数&電圧&計測電圧&誤差\\
 					\hline
 					0  & 0   & 0.007324 & -0.00732 \\
 					1  & 0.5 & 0.499268 & 0.000732 \\
