--- a/3rd_experiment/EE.experiment/report.tex
+++ b/3rd_experiment/EE.experiment/report.tex
@@ -146,7 +146,7 @@ myRIOの5V、3.3V、GND端子及びAnalog I/O、Digital I/Oの端子が、ブレ
 	\subsubsection{課題実験１}
 		\begin{enumerate}[a.]
 			\item ブレッドボートを図\ref{fig:circuit1}のように組み立てMyRIOのAポートに接続した。
-			\item 図\ref{fig:circuit1}のAI0の端子を、GND, 3.3V, 5Vになぎ変え計測した。
+			\item 図\ref{fig:circuit1}のAI0の端子を、GND, 3.3V, 5Vにつなぎ変え計測した。
 			\item 出力した結果をもとにエクセルを使用し、平均値と標準偏差を求めた。
 		\end{enumerate}
 
